--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
 <body>
     <div class="backgroud">
         <a class="titles" href="https://github.com/div648/crossword" target="_blank">sources</a><br>
-        <textarea id="in0" cols="60" rows="15">
-        кроссворд;головоломка;слова;буквы;горизонтальный;вертикальный;поиск;решение;сетка;ячейка;навык;игра;загадка;вопрос;колонка;строка;символ;разгадка;подсказка;комбинация
-    </textarea><br><input type="text" id="in1" placeholder="delimiter" value=";"><br>
+        <textarea id="in0" cols="60" rows="15"></textarea><br><input type="text" id="in1" placeholder="delimiter" value=";"><br>
         <button onclick="createObj()">Create</button>
     </div><br>
     <canvas id="canva"></canvas>
