--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             font-size: 14px;
             font-family: 'Open Sans', sans-serif;
             font-weight: 400;
-            width: 500px;
+            width: 80%;
+            max-width: 550px;
             height: 260px;
             resize: horizontal;
 
@@ -37,7 +38,8 @@
             font-size: 14px;
             font-family: 'Open Sans', sans-serif;
             font-weight: 400;
-            width: 500px;
+            width: 80%;
+            max-width: 550px;
             box-sizing: border-box;
             padding: 0 10px;
             text-align: center;
@@ -57,6 +59,7 @@
 
         canvas {
             margin: 10px 0;
+            width: 100%;
         }
 
         .backgroud {
