--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         }
 
-        input {
+        .inp {
             margin: 10px;
             font-size: 14px;
             font-family: 'Open Sans', sans-serif;
@@ -66,6 +66,15 @@
             background-color: rgb(125, 179, 227);
         }
 
+        .text {
+            margin: 10px;
+           
+            font-family: 'Open Sans', sans-serif;
+            font-weight: 600;
+            font-size: 14px;
+            text-transform: uppercase;
+        }
+
         a {
             text-decoration: none;
         }
@@ -90,7 +99,9 @@
 <body>
     <div class="backgroud">
         <a class="titles" href="https://github.com/div648/crossword" target="_blank">sources</a><br>
-        <textarea id="in0" cols="60" rows="15"></textarea><br><input type="text" id="in1" placeholder="delimiter" value=";"><br>
+        <textarea id="in0" cols="60" rows="15" class="inp"></textarea><br>
+        <input type="text" class="inp" id="in1" placeholder="delimiter" value=";"><br>
+        <input type="checkbox" id="in2" checked> <span class="text">Display letters</span><br>
         <button onclick="createObj()">Create</button>
     </div><br>
     <canvas id="canva"></canvas>
